# data-ingestion

./: .containerfileignore  .containerignore  .gitignore  CODEOWNER  CODEOWNERS  Containerfile  README.md  example.env  kfp_config.ini  pyproject.toml
.github/workflows/: lint.yaml
architecture/: possible-future-state.drawio
data_ingestion/data/: document_prep.py  redhat_product_documentation.py
data_ingestion/document_ingestion/: docling_loader.py  split_documents.py
data_ingestion/elasticsearch/: document_loader.py
data_ingestion/redhat_products/: ingestion.py  product_documentation.py  product_documentation_component.py  redhat_product_documentation.py
kfp/redhat-product-documentation-ingestor/: ingestion-pipeline-elastic.py  ingestion-pipeline-local.py  ingestion-pipeline.py  requirements.txt
kfp/website-ingestor/: ingestion-pipeline-website-local.py  ingestion-pipeline-website.py  test.py  validationscript.sh  website-ingestion-pipeline.py
pipelines/: data_ingestion_elasticsearch.py  kfp_helper.py  redhat_product_ingestion_elasticsearch.py
tests/: test_foo.py
tests/data/: test_document_prep.py  test_redhat_product_documentation.py
tests/redhat_products/: test_redhat_product_documentation.py
