[project]
name = "data-ingestion"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.35.86",
    "docling>=2.14.0",
    "elasticsearch>=8.17.0",
    "kfp>=2.11.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "tox-uv>=1.17.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
  "S",   # bandit
  "N",   # pep8-naming
]
