[project]
name = "data_ingestion"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "docling-core>=2.12.1",
    "einops>=0.8.0",
    "elasticsearch>=8.17.0",
    "kfp>=2.11.0",
    "langchain-community>=0.3.13",
    "langchain-elasticsearch>=0.3.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    #    "sentence-transformers>=3.3.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "tox-uv>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
fix = true
exclude = ["kfp", "*.ipynb"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
  "S",   # bandit
  "N",   # pep8-naming
  "ANN", # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true # disable the requirement for type hint return None for functions without a return
